allprojects {
    group 'allure.notifications'
    version '4.7.0'
}

subprojects {
    apply plugin: 'java-library'

    sourceCompatibility = 1.8

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}

ext {
    lombokVersion = '1.18.34'
    slf4jVersion = '2.0.13'
}
